# fracted

./: .gitignore  README.md  pyproject.toml
examples/: examples.ipynb
fracted/: fractals.py  transformations.py
tests/: test_fractals.py  test_tools.py  test_transformations.py
