[project]
name = "fracted"
version = "0.0.0"
dependencies = ["numpy>=1.23.0"]
requires-python = ">= 3.10"
authors = [{name = "Lukáš Koma", email = "koma.luky@gmail.com"}]
description = "A simple library for drawing IFS fractals and fractal-flames"
readme = "README.md"
license = {text = "MIT License"}
# TODO: keywords, classifiers, urls


[tool.setuptools]
packages = ["fracted"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
known_third_party = ["numpy"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
